--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,6 +12,7 @@ body {
 }
 h1 {
     font-size: 80px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: {{font_color}};
     margin-left: 10%;
     margin-top: 20%;
@@ -20,7 +21,9 @@ h1 {
 </head>
 <body>
 
-    <div><h1>Congrats! You have successfully deployed the application!</h1></div>
+    <div>
+        <h1>Congratulations!</h1><h2>You have successfully deployed the application!</h2>
+    </div>
 
 </body>
 </html>
